--- a/app/translations/de.json
+++ b/app/translations/de.json
@@ -27,5 +27,7 @@
   "boilerplate.containers.HomePage.tryme.message": "Zeige die Github Repositories von",
   "boilerplate.containers.LocaleToggle.de": "",
   "boilerplate.containers.LocaleToggle.en": "",
-  "boilerplate.containers.NotFoundPage.header": "Seite nicht gefunden."
+  "boilerplate.containers.NotFoundPage.header": "Seite nicht gefunden.",
+  "app.containers.LoginPage.loginTo": "Anmelden",
+  "app.containers.LoginPage.login": "Anmelden"
 }
