--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -27,5 +27,7 @@
   "boilerplate.containers.HomePage.tryme.message": "Show Github repositories by",
   "boilerplate.containers.LocaleToggle.de": "de",
   "boilerplate.containers.LocaleToggle.en": "en",
-  "boilerplate.containers.NotFoundPage.header": "Page not found."
+  "boilerplate.containers.NotFoundPage.header": "Page not found.",
+  "app.containers.LoginPage.loginTo": "Login to",
+  "app.containers.LoginPage.login": "Login"
 }
