--- a/app/translations/de.json
+++ b/app/translations/de.json
@@ -6,6 +6,6 @@
   "boilerplate.containers.LocaleToggle.de": "",
   "boilerplate.containers.LocaleToggle.en": "",
   "boilerplate.containers.NotFoundPage.header": "Seite nicht gefunden.",
-  "app.containers.LoginPage.loginTo": "Anmelden",
-  "app.containers.LoginPage.login": "Anmelden"
+  "app.containers.Login.loginTo": "Anmelden",
+  "app.containers.Login.login": "Anmelden"
 }
